tests/rosetta/out/Fortran/arithmetic-geometric-mean.f90
! Generated by Mochi compiler v0.10.26 on 2006-01-02T15:04:05Z
program arithmetic_geometric_mean
  implicit none
    integer :: guess
    integer :: i
    real :: eps
      integer :: newA
      integer :: newG
    character(len=100) :: s0
  call main()
  contains
  recursive real function abs(x) result(res)
    real, intent(in) :: x
    if ((x < 0)) then
      res = -x
      return
    end if
    res = x
    return
  end function abs
  recursive real function sqrtApprox(x) result(res)
    real, intent(in) :: x
    guess = x
    i = 0
    do while ((i < 20))
      guess = ((((guess + x) / guess)) / 2)
      i = (i + 1)
    end do
    res = guess
    return
  end function sqrtApprox
  recursive real function agm(a,g) result(res)
    real, intent(in) :: a
    real, intent(in) :: g
    eps = 1e-14
    do while (((abs((a - g)) > abs(a)) * eps))
      newA = (((a + g)) / 2)
      newG = sqrtApprox((a * g))
      a = newA
      g = newG
    end do
    res = a
    return
  end function agm
  recursive subroutine main()
    write(s0,'(G0)') agm(1,(1 / sqrtApprox(2)))
    print *, s0
  end subroutine main
end program arithmetic_geometric_mean
